--- a/data/blog/Tools-I-use.mdx
+++ b/data/blog/Tools-I-use.mdx
@@ -1,17 +1,40 @@
 ---
 title: 'Tech and Tools I use'
-date: '2022-03-13'
-lastmod: '2021-08-19'
+date: '2022-10-24'
+lastmod: '2021-10-24'
 tags: ['tech', 'Tools', 'dev']
 draft: false
 summary: 'The tech tools I use'
-images: ['/static/images/blog/13/01.jpg']
+images: ['/static/images/blog/01.jpg']
 ---
 
+![Tools](/static/images/blog/01.jpg)
 A list of tools I use whether for:
 
 - Personal side projects
 - My full-time job
 - Or working with clients
 
-## Code
+## 🔨 Editor
+
+The code editor I'm corrently using is VSCode. For data science projects, usually I combine between VSCode and Google Colab. 
+
+## Apps & Productivity
+
+- I use [Notion](https://www.notion.so/) to prepare for daily meetings and managing my projects.
+- I use [Ticktick](https://ticktick.com/?language=en_US) to track my daily tasks.
+- [Slack](https://slack.com/) to communicate with my colleagues.
+
+## Setup 
+
+### Laptop
+
+- MacBook Pro M1 2020 13"
+    - Appel chip: Appl M1
+    - Ram: 16 GB
+    - SSD: 512GB
+
+### Equipments
+- Monitor: [Dell P2213](https://urlzs.com/JB7E2)
+- Keyboard: [Apple Magic Keyboard 2](https://www.amazon.com/Apple-Wireless-Keyboard-Silver-MLA22LL/dp/B01NABDNPH)
+- Mouse: Apple magic mouse 1
