Update blog: Tools I use 🚀

--- a/data/blog/Tools-I-use.mdx
+++ b/data/blog/Tools-I-use.mdx
@@ -5,7 +5,7 @@ lastmod: '2021-10-24'
 tags: ['tech', 'Tools', 'dev']
 draft: false
 summary: 'The tech tools I use'
-images: ['/static/images/blog/01.jpg']
+images: ['/static/images/blog/01.JPG']
 ---
 
 ![Tools](/static/images/blog/01.jpg)
