Update blog: Tools I use 🚀

--- a/data/blog/Tools-I-use.mdx
+++ b/data/blog/Tools-I-use.mdx
@@ -8,7 +8,7 @@ summary: 'The tech tools I use'
 images: ['/static/images/blog/01.JPG']
 ---
 
-![Tools](/static/images/blog/01.jpg)
+![Tools](/static/images/blog/01.JPG)
 A list of tools I use whether for:
 
 - Personal side projects
