Fix: Tech and tools I use🔨

--- a/data/blog/Tools-I-use.mdx
+++ b/data/blog/Tools-I-use.mdx
@@ -18,15 +18,15 @@ A list of tools I use whether for:
 
 ## 🔨 Editor
 
-The code editor I'm corrently using is VSCode. For data science projects, usually I combine between VSCode and Google Colab.
+The code editor I'm currently using is VSCode. For data science projects, usually I combine between VSCode and Google Colab.
 
-## Apps & Productivity
+## 📊 Apps & Productivity
 
 - I use [Notion](https://www.notion.so/) to prepare for daily meetings and managing my projects.
 - I use [Ticktick](https://ticktick.com/?language=en_US) to track my daily tasks.
 - [Slack](https://slack.com/) to communicate with my colleagues.
 
-## Setup
+## 🖥️ Setup
 
 ### Laptop
 
